corporate client design

--- a/src/app/features/entities/components/client/new-client/new-client.component.css
+++ b/src/app/features/entities/components/client/new-client/new-client.component.css
@@ -173,3 +173,15 @@
   border-bottom-left-radius: 0px;
 }
 
+::ng-deep .iti--allow-dropdown input,
+.iti--allow-dropdown input[type="tel"] {
+  width: 100% !important;
+  max-width: 100% !important;
+  box-sizing: border-box;
+}
+
+.docsAlign {
+  display: grid;
+  grid-template-columns: 240px 120px;
+  align-items: center;
+}
