addressed design issue on VQ-3776

--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.css
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.css
@@ -222,7 +222,8 @@ select.form-control {
   pointer-events: none;
 }
 .cheque-options {
-  position: relative;
+ 
+  position: absolute; /* Changed from relative to absolute */
   background: white;
   border: 1px solid #ccc;
   width: 150px;
