--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
@@ -7,137 +7,90 @@
         <!-- Input Fields Section -->
         <p class=" mt-2 ms-1 filter-by-text">{{ 'gis.quotation.filter_by' | translate }}:</p>
 
-        <!-- First Row -->
-        <div class="row mb-2">
-          <div class="col-sm-3 col-12">
-            <!-- Search Type Dropdown -->
-            <div class="field mb-4 w-full">
-              <!-- <label for="search-type" class="quote-label required">
-                    {{ 'gis.quotation.client' | translate }}
-                  </label><br> -->
-              <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
-                [value]="clientName" data-bs-toggle="modal" data-bs-target="#clientSearchModal" readonly
-                placeholder="Client" />
-            </div>
+        <div class="row mt-2 mb-4">
+          <div class="col-sm-3  col-12">
+
+            <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
+              [value]="clientName | sentenceCase" data-bs-toggle="modal"
+              data-bs-target="#clientSearchModal" readonly placeholder="Client" />
 
             <!-- Client Search Modal Component -->
             <app-client-search-modal (clientSelected)="onClientSelected($event)"></app-client-search-modal>
           </div>
-          <div class="col-sm-3 col-12">
-            <!-- Search Type Dropdown -->
-            <div class="field mb-4 w-full">
-              <!-- <label for="search-type" class="quote-label required">
-                    {{ 'gis.quotation.agent' | translate }}
-                  </label><br> -->
-              <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
-                [value]="agentName" data-bs-toggle="modal" data-bs-target="#agentSearchModal" readonly
-                placeholder="Agent" />
-            </div>
+          <div class="col-sm-3  col-12">
+            <input type="text" id="quote-number-input" class=" form-control form-control-sm mb-1"
+              placeholder="Quotation number" [(ngModel)]="quotationNumber"
+              (ngModelChange)="onInputChange()" />
+          </div>
+          <div class="col-sm-3 col-12 ">
 
+            <p-calendar name="withEffectiveFromDate" [(ngModel)]="fromDate" [dateFormat]="dateFormat"
+              [showIcon]="true" [showButtonBar]="true" [placeholder]="'Date from'"
+              (onSelect)="onDateFromInputChange($event)" (onClear)="clearDateFilters()"
+              class="custom-calendar-height">
+            </p-calendar>
+          </div>
+
+          <div class="col-sm-3 col-12 ">
+
+            <p-calendar name="withEffectiveToDate" [(ngModel)]="toDate" [dateFormat]="dateFormat"
+              [showIcon]="true" [showButtonBar]="true" [placeholder]="'Date to'"
+              (onSelect)="onDateToInputChange($event)"
+              (onClear)="clearDateFilters()"
+              class="custom-calendar-height" >
+            </p-calendar>
+
+          </div>
+        </div>
+        <div class="row  mt-2 mb-4">
+          <div class=" col-sm-3 col-12">
+
+            <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
+              [value]="productName | sentenceCase" data-bs-toggle="modal"
+              data-bs-target="#productSearchModal" placeholder="Product" readonly />
+
+            <!-- Product Search Modal Component -->
+            <app-product-search-modal (productSelected)="onProductSelected($event)">
+            </app-product-search-modal>
+          </div>
+
+          <div class=" col-sm-3 col-12 ">
+
+            <p-dropdown [options]="status" optionLabel="status" optionValue="status" [filter]="true"
+              filterBy="status" placeholder="Status" [(ngModel)]="selectedStatus"
+              (onChange)="onStatusSelected($event.value)" class="form-control-sm mb-1 custom-dropdown">
+            </p-dropdown>
+
+          </div>
+          <div class="col-sm-3 col-12 ">
+            <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
+              [value]="agentName | sentenceCase" data-bs-toggle="modal" data-bs-target="#agentSearchModal"
+              readonly placeholder="Agent" />
             <!-- Client Search Modal Component -->
             <app-agent-search-modal (agentSelected)="onAgentSelected($event)"></app-agent-search-modal>
           </div>
-          <div class="col-sm-3 col-12">
-            <!-- Products Dropdown -->
-            <div class="field">
-              <!-- <label for="product" class="quote-label" id="product">
-                    {{ 'gis.quotation.search_results' | translate }}
-                  </label><br> -->
-              <input type="text" id="quote-input" class="form-select form-control form-control-sm mb-1"
-                [value]="productName" data-bs-toggle="modal" data-bs-target="#productSearchModal" readonly
-                placeholder="Product" />
+        </div>
 
-              <!-- Client Search Modal Component -->
-              <app-product-search-modal (productSelected)="onProductSelected($event)">
-              </app-product-search-modal>
-            </div>
+        <div class="row mt-4 mb-4">
+          <div class="col-6 d-flex justify-content-start">
+            <button type="button" class="btn btn-primary " id="search-buttons"
+              (click)="fetchGISQuotations()">
+              {{ 'gis.quotation.search' | translate }}</button>
+            <button type="button" class="btn btn-outline-primary ms-2 " id="search-buttons"
+              (click)="clearFilters()">
+              {{ 'gis.quotation.clear' | translate }}</button>
+          </div>
+          <div class="col-6">
+
           </div>
         </div>
 
-        <!-- Second Row -->
-        <div class="row g-3 align-items-center mb-4">
-
-
-          <div class="col-sm-3 col-12">
-            <!-- Quotation Number Input -->
-            <div class="field">
-              <!-- <label for="quote-number" class="quote-label" id="quote-number">
-                    <br>
-                  </label><br> -->
-              <input type="text" id="quote-number-input" class="form-control form-control-sm mb-1"
-                [(ngModel)]="quotationNumber" (ngModelChange)="onInputChange()" placeholder="Quotation Number"
-                [style]="{ 'height': '38px' }" />
-            </div>
-          </div>
-
-          <div class="col-sm-3 col-12">
-            <!-- Status Type Dropdown -->
-            <div class="field">
-              <!-- <label for="product" class="quote-label" id="product">
-                    <br>
-                  </label><br> -->
-              <p-dropdown [options]="status" [(ngModel)]="selectedStatus" optionLabel="status" [filter]="true"
-                filterBy="status" [showClear]="true" placeholder="Status"
-                [style]="{ 'width': '100%', 'height': '38px' }">
-                <ng-template pTemplate="selectedItem">
-                  <div class="business-type-item business-type-value" *ngIf="selectedStatus">
-                    <div>{{ selectedStatus.status }}</div>
-                  </div>
-                </ng-template>
-                <ng-template let-status pTemplate="item">
-                  <div class="business-type-item">
-                    <div>{{ status.status }}</div>
-                  </div>
-                </ng-template>
-              </p-dropdown>
-            </div>
-          </div>
-
-          <div class="col-sm-3 col-12">
-            <!-- Effective From Date -->
-            <div class="field">
-              <!-- <label for="product" class="quote-label" id="product">
-                    <br>
-                  </label><br> -->
-              <p-calendar name="withEffectiveFromDate" [(ngModel)]="fromDate" [dateFormat]="dateFormat"
-                [showIcon]="true" [showButtonBar]="true" [placeholder]="'Date from'" [minDate]="minDate"
-                (onSelect)="onDateFromInputChange($event)" (onClear)="clearDateFilters()"
-                [style]="{ 'width': '100%', 'height': '38px' }">
-              </p-calendar>
-            </div>
-          </div>
-
-          <div class="col-sm-3 col-12">
-            <!-- Effective To Date -->
-            <div class="field">
-              <!-- <label for="product" class="quote-label" id="product">
-                    <br>
-                  </label><br> -->
-              <p-calendar name="withEffectiveToDate" [(ngModel)]="toDate" [dateFormat]="dateFormat" [showIcon]="true"
-                [showButtonBar]="true" [placeholder]="'Date to'" [minDate]="minToDate"
-                (onSelect)="onDateToInputChange($event)" (onClear)="clearDateFilters()"
-                [style]="{ 'width': '100%', 'height': '38px' }">
-              </p-calendar>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- Add this right after the second row div -->
-        <div class="row mt-2">
-          <div class="col-12 d-flex justify-content-start">
-            <button class="btn btn-primary me-2" (click)="fetchGISQuotations()">
-              {{ 'gis.quotation.search' | translate }}
-            </button>
-            <button class="btn btn-outline-primary" (click)="clearFilters()">
-              {{ 'gis.quotation.clear' | translate }}
-            </button>
-          </div>
-        </div>
+      
 
         <!-- Table Section -->
         <div class="table-section mt-4 mb-3">
           <p class="title mb-3">Results</p>
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table [value]="gisQuotationList" [paginator]="true" [rows]="10" [scrollable]="true"
             scrollDirection="horizontal" [showCurrentPageReport]="true"
             currentPageReportTemplate=" {first} - {last} of {totalRecords}" [responsiveLayout]="'scroll'"
@@ -151,7 +104,7 @@
                 <th style="background-color: #f0f0f0">{{ 'gis.quotation.status' | translate }}</th>
                 <th style="background-color: #f0f0f0">{{ 'gis.quotation.cover_from' | translate }}</th>
                 <th style="background-color: #f0f0f0">{{ 'gis.quotation.cover_to' | translate }}</th>
-                <th></th>
+                <th style="background-color: #f0f0f0"></th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-quotation>
