--- a/src/app/features/fms/components/client-search/client-search.component.html
+++ b/src/app/features/fms/components/client-search/client-search.component.html
@@ -134,9 +134,9 @@
                 <th class="header-bg">
                   {{ "fms.receipting.type" | translate }}
                 </th>
-                <th class="header-bg">
+                <!-- <th class="header-bg">
                   {{ "fms.receipting.actions" | translate }}
-                </th>
+                </th> -->
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-client let-i="rowIndex">
@@ -150,7 +150,7 @@
                 <td>{{ client.systemShortDesc }}</td>
                 <td>{{ client.name }}</td>
                 <td>{{ client.receiptType }}</td>
-                <td>
+                <!-- <td>
                   <button
                     class="btn btn-secondary"
                     style="
@@ -165,17 +165,10 @@
                   >
                     {{ "fms.receipting.select" | translate }}
                   </button>
-                </td>
+                </td> -->
               </tr>
             </ng-template>
 
-            <!-- <ng-template pTemplate="paginatorleft">
-              {{ "fms.receipting.showing" | translate }} {{ first }}
-              {{ "fms.receipting.to" | translate }} {{ first + rows }}
-              {{ "fms.receipting.of" | translate }} {{ totalRecords }}
-              {{ "fms.receipting.entries" | translate }}
-            </ng-template> -->
-            <!-- Custom paginator template -->
             <ng-template pTemplate="paginator" let-state>
               <div class="custom-paginator">
                 <button
@@ -231,8 +224,8 @@
         {{ "fms.receipting.back" | translate }}
       </button>
     </div>
-    <div class="btn-next">
-      <button type="button" class="btn-primary-outline" (click)="onNext()">
+    <div class="btn-next" *ngIf="canShowNextBtn">
+      <button type="button" class="btn btn-primary" (click)="onNext()">
         {{ "fms.receipting.next" | translate }}
       </button>
       <!-- <button type="button" class="btn-primary" (click)="onNext()">Next</button> -->
