VQ-1383-NQ-REFACTORING:Ability to View Quotation Summary - Risk Excesses

--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -974,10 +974,11 @@
         <!-- Add Risk Section Modal -->
         <div class="modal fade" id="addSection" tabindex="-1" role="dialog" aria-labelledby="addSectionLabel"
           aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" style="min-width: 608px;" role="document">
+          <div class="modal-dialog modal-dialog-centered" style="min-width: 708px;" role="document">
             <div class="modal-content" id="addSectionModal">
               <div class="modal-body">
                 <h5 class="modal-title mt-2" id="editOtherDetailsLabel">{{'gis.quotation.risk_sections' | translate}}
+                  <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
                 </h5>
                 <!-- <div class="search-container mb-3">
                   <span class="search-icon"><i class="fa fa-search"></i></span>
