--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -824,8 +824,8 @@
                   </ng-template>
                   <ng-template pTemplate="body" let-data>
                     <tr>
-                      <td>{{data.narration}}</td>
-                      <td>{{data.value}}</td>
+                      <td>{{data.description}}</td>
+                      <td>{{data.excess}}</td>
                     </tr>
                   </ng-template>
                 </p-table>
